--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-.heroSection{
+body{
+    display: block;
+}
+.heroSection {
     background-image: url("./media/BG.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -14,214 +16,352 @@
 
 }
 
-.ServicesOfferedContainer{
+.ServicesOfferedContainer {
     display: flex;
     justify-content: center;
     padding: 60px;
     gap: 32px;
 
 }
-.weOfferCard{
+
+.weOfferCard {
     border: 1px solid black;
     border-radius: 10px;
     width: 300px;
     transition: all 0.4s ease;
 }
-.weOfferCard:hover{
-    
+
+.weOfferCard:hover {
+
     transform: scale(1.05);
     cursor: pointer;
 }
-.weOfferContent{
+
+.weOfferContent {
     padding: 10px;
     font-size: small;
     font-weight: lighter;
 }
-.weOfferCard>img{
+
+.weOfferCard>img {
     width: 100%;
     height: 190px;
     object-fit: cover;
     object-position: center;
-    border-radius: 9px  9px 0  0;
+    border-radius: 9px 9px 0 0;
 }
-.navbar{
-       display: flex;
-       justify-content:space-between; 
-       padding:15px 45px;
-       gap: 8px;
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 45px;
+    gap: 8px;
 }
-.user_icon{
+
+.user_icon {
     display: none;
 }
 
 
-.navbar a{
+.navbar a {
     color: white;
     text-decoration: none;
     font-size: 700;
 }
-.navbarMenuContainer{
+
+.navbarMenuContainer {
     display: flex;
     gap: 18px;
 }
 
-.heroSectionContainer{
+.heroSectionContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     color: white;
     gap: 32px;
 }
-.heroSectionLogo{
+
+.heroSectionLogo {
     width: 200px;
 }
-.heroSectionInputContainer{
+
+.heroSectionInputContainer {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
-    gap:10px;
+    gap: 10px;
     padding: 10px;
     border-radius: 10px;
-    width: 50%;    
+    width: 50%;
 }
-.inputLocationSelectContainer{
+
+.inputLocationSelectContainer {
     width: 35%;
     border-right: 1px solid grey !important;
     padding: 10px;
     border-radius: 10px;
-    outline: none;      
-    border:none;
+    outline: none;
+    border: none;
     overflow: hidden;
     text-overflow: clip;
     background-color: white;
 }
-.inputRestrauntSelectContainer{
+
+.inputRestrauntSelectContainer {
     width: 65%;
-    border:none;
+    border: none;
     padding: 10px;
     border-radius: 10px;
     background-color: white;
     overflow: hidden;
     text-overflow: clip;
-    
+
 }
-input{
-    outline: none;  
+
+.heroSectionInputContainer input {
+    outline: none;
     border: none;
 }
 
 
-.heroSectionTitle{
+.heroSectionTitle {
     font-weight: 400;
-    font-size: x-large; 
+    font-size: x-large;
 
 }
-.collectionsContainer{
+
+.collectionsContainer {
     margin: 10px 100px 100px 100px;
 }
-.collectionsCardContainer{
+
+.collectionsCardContainer {
     display: flex;
     gap: 8px;
     justify-content: center;
 
 }
-.card{
+
+.card {
     background-size: cover;
     height: 300px;
     width: 240px;
     border-radius: 10px;
     position: relative;
 }
-.overlay{
+
+.overlay {
     height: 100%;
-    width: 100%;                
+    width: 100%;
     /* background-color: rgba(66, 57, 57, 0.203); */
-    background: linear-gradient( 0deg, rgba(0, 0 ,0, 0.8) 0%, rgba(0, 0 ,0, 0.05) 50%, rgba(0, 0 ,0, 0.05) 85% );       
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.05) 50%, rgba(0, 0, 0, 0.05) 85%);
     position: absolute;
     border-radius: 10px;
     top: 0;
 }
 
-.collectionContent > h2{
+.collectionContent>h2 {
     color: white;
     font-size: 15px;
     position: absolute;
-    font-weight:normal;
+    font-weight: normal;
     padding: 250px 10px 0px 10px;
 }
-.collectionContent > span{
+
+.collectionContent>span {
     position: absolute;
     color: white;
-    font-weight:normal;
+    font-weight: normal;
     font-size: inherit;
     padding: 270px 10px 0px 10px;
 }
-.card1{
+
+.card1 {
     background-image: url(./media/collection1.avif);
 }
-.card2{
+
+.card2 {
     background-image: url(./media/collection2.avif);
 }
-.card3{
+
+.card3 {
     background-image: url(./media/collection3.avif);
 }
-.card4{
+
+.card4 {
     background-image: url(./media/collection4.avif);
 }
-.subheadingContainer{
+
+.subheadingContainer {
     font-size: medium;
     display: flex;
     justify-content: space-between;
     padding: 8px 60px;
 }
-.red{
+
+.red {
     color: red;
 }
 
+.getAppContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-top: -100px;
+    background-color: rgb(255, 251, 247);
+}
+.left{
+    display: flex;
+    justify-content: flex-end;
+    width:50%;
 
+}
+.right{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content:space-between;
+    gap: 8px;
+    font-weight: 300;
+    height:30vh;
+}
+.right input{
+    padding: 10px;
+    border-radius: 5px;
+    border-style: solid;
+
+}
+.left>img{
+    width: 50%;
+}
+
+.radioInputContainer{
+    display: flex;
+    gap: 18px;
+    align-items: center;
+}
+.emailInputContainer{
+    display: flex;
+    gap: 8px;   
+    
+}
+.emailInputContainer>a{
+        background-color: rgb(255, 71, 86);
+        color: white;
+        font-weight: normal;
+        padding: 10px;
+        text-decoration: none;
+        border-radius: 4px;
+        text-align: center;
+}
+.appFromContainer>h5{
+    padding: 8px;
+    color: grey;
+    font-weight: bold;
+}
+.storeContainer{
+    display: flex;
+    gap: 10px;   
+}
+.storeContainer>img{
+    width: 40%;
+}
+footer{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.TopFooterSection img{
+    width: 50%;
+}
 @media only screen and (max-width:600px) {
-    .navbarMenuContainer .user_icon{
-        display: flex; ;
+    .navbarMenuContainer .user_icon {
+        display: flex;
+        ;
     }
-    .link{
+
+    .link {
         display: none;
     }
-   .navbar{
+
+    .navbar {
         padding: 15px 15px;
     }
-    .heroSectionTitle{
-          text-align: center;
+
+    .heroSectionTitle {
+        text-align: center;
     }
-   .heroSectionInputContainer{
+
+    .heroSectionInputContainer {
         display: flex;
         flex-direction: column;
         width: 100%;
         margin: 120px 0px;
-        
-    }
-    .heroSectionInputContainer>*{
+
+    }   
+
+    .heroSectionInputContainer>* {
         gap: 10px;
         width: 100%;
         padding: 20px;
-        
+
     }
-    .heroSection{
+
+    .heroSection {
         height: 100vh;
     }
+
     .ServicesOfferedContainer {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .subheadingContainer{
+
+    .collectionsContainer{
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        align-items: center;
+        
     }
-    .collectionsContainer>h1{
-                font-weight: 100;
-    }
-    .collectionsCardContainer{
+
+    .subheadingContainer {
         display: flex;
+        
+        justify-content: center;
+        align-items: center;            
+        flex-wrap: wrap;
+        
+        gap:2rem;
+
     }
-}
+
+    .collectionsContainer>h1 {
+        font-weight: 500;
+        
+    }
+
+    .collectionsCardContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;       
+    }
+    .getAppContainer{
+        display: flex;
+        flex-direction: column;
+    }
+    .left img{
+        width: 100%;   
+    }
+    .emailInputContainer {
+        
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-self: center;
+        margin: 10px;
+    }
+    .storeContainer img{
+        width: 100%;
+    }
+}               
