Complete styling for 600 px + screens

--- a/style.css
+++ b/style.css
@@ -273,13 +273,82 @@ footer{
     flex-direction: column;
     width: 100%;
 }
-.TopFooterSection img{
-    width: 50%;
+.TopFooterSection {
+    display: flex;
+    justify-content: center;
+    gap: 18px;
+}
+.TopFooterSection>img{
+    width: 10%;
+
+}
+.buttonContainer{
+    display: flex;
+    gap: 10px;
+}
+.buttonContainer>button{
+    background-color: white;
+    padding: 5px 8px;
+    text-align: center;
+    border: solid rgb(79, 72, 72) 1px;
+    border-radius: 5px;
+
+}
+.buttonContainer img{
+    width: 22%;
+
+}
+.navigationContainer {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	gap: 1rem;
+	width: 90%;
+	margin: auto;
+	padding: 3rem 0;
+}
+.navigationContainer a{
+    text-decoration: none;
+    color: grey;
+}
+.navigationContainer a:hover{
+    color: black;
+}
+.link__container{
+    display: flex;
+    flex-direction: column;
+    font-size: small;
+    gap: 8px;
+}
+.link__container>h5{
+    font-size: medium;
+}
+.social__links_container{
+    display: flex;
+    gap: 8px;
+    
+}
+.social__links_container>button{
+    border-style: none;
+    background-color: transparent;
+}
+.social__links_container>button>i{
+        color: white;
+        background-color: black;
+        border-radius: 17px;
+        padding: 8px;
+        cursor: pointer;       
+}
+.disclaimer{
+    color: grey;
+    font-size: 13px;
+    border-top: 1px solid grey;
+    margin:  0px 60px;
+    padding-top: 18px;
 }
 @media only screen and (max-width:600px) {
     .navbarMenuContainer .user_icon {
         display: flex;
-        ;
+
     }
 
     .link {
